--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "express": "^5.1.0",
     "font-awesome": "^4.7.0",
     "http-proxy-middleware": "^3.0.5",
